[project]
name = "persona_product_env"
version = "0.1.0"
description = "Persona Product Recommendation Environment"
authors = [{ name = "Ruthra" }]

dependencies = [
    "openenv-core>=0.2.0",
    "flask",
    "openai"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
